--- a/Table.html
+++ b/Table.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Table</title>
 </head>
+
 <body>
     <h1>IPL Team</h1>
     <table border="1">
-        <tr><td>Name</td><td>Age</td><td>Team</td></tr>
-        <tr><td>Dhoni</td><td>41</td><td>CSK</td></tr>
-        <tr><td>Virat Kohli</td><td>34</td><td>RCB</td></tr>
-        <tr><td>KL Rahul</td><td>30</td><td>LSG</td></tr>
+        <thead>
+            <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Team</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Dhoni</td>
+                <td>41</td>
+                <td>CSK</td>
+            </tr>
+            <tr>
+                <td>Virat Kohli</td>
+                <td>34</td>
+                <td>RCB</td>
+            </tr>
+            <tr>
+                <td>KL Rahul</td>
+                <td>30</td>
+                <td>LSG</td>
+            </tr>
+        </tbody>
+
     </table>
 </body>
+
 </html>
